--- a/src/styles/appointment.css
+++ b/src/styles/appointment.css
@@ -5,11 +5,99 @@
   display: flex;
 }
 .booking-container {
+  position: relative;
   width: 40%;
   height: auto;
   background-color: var(--background);
   -webkit-box-shadow: var(--webkit);
   box-shadow: var(--box-shadow);
+}
+.booking-container .close-button {
+  position: absolute;
+  right: 15px;
+  width: 30px;
+  display: flex;
+  border-radius: 8px;
+  justify-content: center;
+  align-items: center;
+  height: 30px;
+  color: gray;
+  border: 1px solid lightgrey;
+  top: 10px;
+  cursor: pointer;
+  transition: all linear 0.2s;
+}
+.booking-container {
+  padding: 10px 20px;
+}
+.close-button:hover {
+  background-color: lightgrey;
+}
+.show-service-booking {
+  height: 400px;
+  width: auto;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  overflow-y: scroll;
+  justify-content: center;
+}
+.grid-service {
+  width: 100%;
+  margin: 10px;
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
+  gap: 20px;
+}
+.items-service-booking {
+  width: auto;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  font-family: var(--family-header);
+  align-items: center;
+}
+.img-booking {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+}
+
+.items-service-booking span {
+  font-size: 18px;
+
+  font-weight: 600;
+}
+
+.items-service-booking button {
+  padding: 10px 20px;
+  background-color: transparent;
+  border: 1px solid var(--color-button);
+  font-weight: 600;
+  cursor: pointer;
+  width: 100%;
+  text-transform: uppercase;
+  transition: all 0.3s ease-in-out;
+}
+
+.items-service-booking button:hover {
+  background-color: var(--color-button);
+  color: var(--background);
+}
+
+.desc-booking {
+  font-size: 14px !important;
+
+  text-align: center;
+  font-weight: 300 !important;
+  overflow: hidden;
+  max-width: 200px;
+  height: 60px;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 .header-booking {
   font-weight: 600;
