--- a/src/styles/appointment.css
+++ b/src/styles/appointment.css
@@ -46,8 +46,7 @@
   width: 100%;
   margin: 10px;
   display: grid;
-  grid-template-columns: auto auto;
-  grid-template-rows: auto auto;
+  grid-template-columns: 1fr 1fr;
   gap: 20px;
 }
 .items-service-booking {
@@ -202,7 +201,6 @@
   margin: 10px;
   display: grid;
   grid-template-columns: auto auto;
-  grid-template-rows: auto auto;
   gap: 20px;
 }
 .items-service-bookings {
